Firebase deployment added

--- a/web/index.html
+++ b/web/index.html
@@ -28,7 +28,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>flutter_portfolio</title>
+  <title>Rohit Soni | Tech Expert</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
