--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Rohit Soni - Experienced Technology Professional specializing in software development, system architecture, and innovative solutions. Explore my portfolio to see my work and expertise.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
